2001-06-04  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (change_user_chfn): Added hack to support Debian's chfn.

2001-06-01  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_dialing_set): Remove old sections
	that are not in the new values.
	(xst_network_suse70_set_ppp): Remove dialing hash entries,
	instead of removing in the file: this is done in dialing_get.
	(xst_network_iface2dial): don't overwrite login, phone and
	password: that's done at frontend level.
	Typo fixes.

	Lots of other typo fixes in network.pl.in. Basicly, I left
	SuSE 7.0 ppp management working, and did a lot of testing to
	make sure of that.

2001-06-01  Hans Petter Jansson  <hpj@ximian.com>

	Implement inline replacing of NFS entries and options.

	* share.pl.in (xst_share_nfs_info_dup): Implement.
	  (xst_share_nfs_info_match_data): Implement.
	  (xst_share_nfs_table_dup): Implement.
	  (xst_share_nfs_table_find): Implement.
	  (xst_share_nfs_table_find_info_equivalent): Implement.
	  (xst_share_nfs_client_info_dup): Implement.
	  (xst_share_nfs_client_table_dup): Implement.
	  (xst_share_nfs_exports_get_next_entry_line): Implement.
	  (xst_share_nfs_exports_get_entry_line_fields): Implement.
	  (xst_share_nfs_info_print_clients): Implement.
	  (xst_share_nfs_info_print_entry): Implement.
	  (xst_share_nfs_client_print_option_hash): Implement.
	  (xst_share_nfs_info_print_synthesized_entry): Implement.
	  (xst_share_nfs_exports_add_entry): Implement.
	  (xst_share_nfs_exports_update_entry): Implement.
	  (xst_share_nfs_exports_remove_entry): Implement.
	  (xst_share_nfs_exports_get_entry_line_point): Implement.
	  (xst_share_replace_nfs_exports): Re-implement.

2001-05-31  Arturo Espinosa Aldama  <arturo@ximian.com>

	* replace.pl.in (xst_replace_remove_ini_section): remove lines
	if they're left empty. This is nicer.

	* network.pl.in: Multiple fixes to new SuSE 70 ppp stuff. Did
	some testing. Still one bug in output remaining.
