@@ -1,5 +1,11 @@
 2001-06-04  Tambet Ingo  <tambet@ximian.com>
 
+        * x.pl.in: Add
+
+	* xconf-conf.pl.in: Add
+
+2001-06-04  Tambet Ingo  <tambet@ximian.com>
+
 	* users-conf.in (change_user_chfn): Added hack to support Debian's chfn.
 
 2001-06-01  Arturo Espinosa Aldama  <arturo@ximian.com>
